responsive almost done

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         </div>
                         <div class="blog-info">
                             <h3 class="blog-title">
-                                Your logo is copied
+                                Your logo is <br> copied
                             </h3>
                             <p class="blog-author">
                                 By <a href="">Ferdinand Vogler</a>
@@ -187,7 +187,7 @@
                             <i class="fa-sharp fa-solid fa-star r-filled"></i>
                             <i class="fa-sharp fa-solid fa-star r-empty"></i>
                         </div>
-                        <div>
+                        <div class="r-number">
                             <p>4.5</p>
                         </div>
                         <div class="cours-duration">
